--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
             
             <div class="button-container">
-                <a href="index.html" class="button">Назад до головної</a>
+                <a href="https://melnyk1789.github.io/rehabilitation-page/" class="button">Назад до головної</a>
             </div>
         </div>
     </main>
